# pyMSHRF

./: .RData  .Rhistory  .gitignore  README.md  pyMSHRF.Rproj  setup.cfg  setup.py
pyMSHRF/: HRF_calculator.py  __init__.py  derivatization.py
pyMSHRF/HRF/: HRF_calculator.py  __init__.py
pyMSHRF/pyisopach/: __init__.py  element.py  molecule.py
