[metadata]
name = pyMSHRF
author = Zinuo Huang
description = This program calculates the high-resolution filter score while doing GC/MS annotation.
version = 0.1.0
url = 
keywords =
  cheminformatics
  GC/MS annotation
  metabolomics
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.7
  License :: OSI Approved :: MIT License
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires = >= 3.2
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
